CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file..

23 January 2009
+ Extra apostrophe check added to prompt script
+ Dropped unneeded array declaration from Init.php
+ Added Format selection to fckeditor, moved buttons around,
+ Updated: javascript/prompt/default.php, javascript/editor/fckeditor/custom.js
  javascript/editor/fckeditor/phpwsstyles.xml

21 January 2009
+ Checking user session in security
+ DBPager - was missing column names when prefixed by table name

15 January 2009
+ Database
  o Added moveRow function
  o Added column formatting check on addColumn and addWhere
+ DBPager - if a sort column is reset, indexby is no longer included
  on the link

9 January 2009
+ Added 'RELEASE' to do-no-allow database list
+ Added error check to Form_Element
+ Fixed naughty word parsing

Version 1.9.1
---------------------------------------------------------------------
7 January 2009
+ Big change to character parsing. Should prevent certain characters
  from getting mangled in posting. Huge thanks to Verdon.

6 January 2009
+ Added extra filters to prevent values other than tables getting
  prefixed in a select statement. Thanks Olivier Sannier.
+ Added an ignore_table parameter to the addJoin function. Doesn't
  force table added to the join. Allows multiple conditional arrays to
  be added to join_on_1 and join_on_2

19 December 2008
+ Added some code to try and fix drag and drop images and links in
  FCKEditor. 

18 December 2008
+ Init - defines PHPWS_HOME_HTTP using Core's getCurrentUrl
+ Core - users PHPWS_HOME_HTTP if all parameters are true.

16 December 2008
+ session_name got lost on conversion. Fixed.

12 December 2008
+ Template - Added option to prevent Sigma cache use.

11 December 2008
+ Editor - moved user option above force editor define. Define was
  forcing a user who didn't want an editor to do so.
+ Form - if USE_BREAKER is false, text areas will get a use breaks